--- a/README.me
+++ b/README.me
@@ -1,1 +1,3 @@
-cajas.json es el archivo .json donde extraemos los datos \n funcionesjson es el archivo donde se encunta las funciones que utiliza el programa principal \n y proyecto_json es el archivo del programa principal
+cajas.json es el archivo .json donde extraemos los datos
+funcionesjson es el archivo donde se encunta las funciones que utiliza el programa principal
+proyecto_json es el archivo del programa principal
