Añadido las explicaciones de las funciones al README.me finalización de la función 1 y 2 y avance de la 3

--- a/README.me
+++ b/README.me
@@ -1,3 +1,19 @@
 cajas.json es el archivo .json donde extraemos los datos
 funcionesjson es el archivo donde se encunta las funciones que utiliza el programa principal
 proyecto_json es el archivo del programa principal
+
+
+Voy a extraer información sobre varias cajas de un videojuego
+1ºFunción:
+	Listar el nombre de las cajas, con una url de la imagen de esta
+2ºFunción:
+	Introduce el nombre de una caja para ver los objetos de esta y los cuente la cantidad de objetos
+3ºFunción:
+	Solicitar un precio minimo y un precio maximo y mostrar el precio de venta y el precio de compra de las cajas en ese rango
+4ºFunción
+	Introduce un hexadecimal para buscar los objetos con un mismo color en hexadecimal en todas las cajas, diferenciando los de una caja con los de otra
+5ºFunción
+	Imprime los nombres de las cajas con el tipo de esta, ordenadas por precio de venta o de compra de mayor a menor e indicar el numero total de estas de cajas con esos valores
+	
+	5.1ºFunción
+		Invertir el orden de salida de los datos de menor a mayor
